# better-auth-diesel-sqlite

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  VISION.md  context7.json  diesel.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
examples/: axum_basic.rs
migrations/00000000000000_create_auth_tables/: down.sql  up.sql
src/: adapter.rs  config.rs  conversions.rs  error.rs  lib.rs  models.rs  schema.rs
src/ops/: account.rs  api_key.rs  invitation.rs  member.rs  mod.rs  organization.rs  passkey.rs  session.rs  two_factor.rs  user.rs  verification.rs
tests/: tests.rs
tests/common/: mod.rs
tests/integration/: account_ops.rs  api_key_ops.rs  invitation_ops.rs  member_ops.rs  mod.rs  organization_ops.rs  passkey_ops.rs  session_ops.rs  two_factor_ops.rs  user_ops.rs  verification_ops.rs
